// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sandbox/MenuListItem Default smoke-test 1`] = `
.c3 {
  overflow: hidden;
  line-height: 22px;
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  -webkit-transition: 0.2s background-color;
  transition: 0.2s background-color;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  opacity: 0.32;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  pointer-events: none;
}

.c0:disabled:hover,
.c0[aria-disabled]:not([aria-disabled=false]):hover {
  background-color: unset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  color: #474747;
  line-height: 22px;
  font-size: 14px;
  display: grid;
}

<div data-dark="false">
  <div aria-disabled="false"
       role="button"
       class="c0"
  >
    <div class="c1">
      <div class="c2">
        <div title="Knob to change"
             class="c3"
        >
          Knob to change
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sandbox/MenuListItem Disabled smoke-test 1`] = `
.c3 {
  overflow: hidden;
  line-height: 22px;
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  -webkit-transition: 0.2s background-color;
  transition: 0.2s background-color;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  opacity: 0.32;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  pointer-events: none;
}

.c0:disabled:hover,
.c0[aria-disabled]:not([aria-disabled=false]):hover {
  background-color: unset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  color: #474747;
  line-height: 22px;
  font-size: 14px;
  display: grid;
}

<div data-dark="false">
  <div aria-disabled="true"
       role="button"
       class="c0"
  >
    <div class="c1">
      <div class="c2">
        <div title="Disabled item"
             class="c3"
        >
          Disabled item
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sandbox/MenuListItem HardLink smoke-test 1`] = `
.c4 {
  overflow: hidden;
  line-height: 22px;
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  -webkit-transition: 0.2s background-color;
  transition: 0.2s background-color;
}

.c1:hover {
  background-color: rgba(0,0,0,0.04);
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  opacity: 0.32;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  pointer-events: none;
}

.c1:disabled:hover,
.c1[aria-disabled]:not([aria-disabled=false]):hover {
  background-color: unset;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  color: #474747;
  line-height: 22px;
  font-size: 14px;
  display: grid;
}

.c0 {
  display: block;
}

<div data-dark="false">
  <a href="#linkTo"
     target="_blank"
     rel="noopener noreferrer"
     class="c0"
  >
    <div aria-disabled="false"
         role="button"
         class="c1"
    >
      <div class="c2">
        <div class="c3">
          <div title="This is link with target &quot;_blank&quot;"
               class="c4"
          >
            This is link with target "_blank"
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Sandbox/MenuListItem Icon smoke-test 1`] = `
.c4 {
  overflow: hidden;
  line-height: 22px;
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  -webkit-transition: 0.2s background-color;
  transition: 0.2s background-color;
}

.c1:hover {
  background-color: rgba(0,0,0,0.04);
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  opacity: 0.32;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  pointer-events: none;
}

.c1:disabled:hover,
.c1[aria-disabled]:not([aria-disabled=false]):hover {
  background-color: unset;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  color: #474747;
  line-height: 22px;
  font-size: 14px;
  display: grid;
}

.c0 {
  display: block;
}

.c5 {
  display: grid;
  gap: 8px;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  color: #858585;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: inline-block;
  width: 24px;
  height: 24px;
  background-color: currentColor;
}

<div data-dark="false">
  <a href="#linkTo"
     class="c0"
  >
    <div aria-disabled="false"
         role="button"
         class="c1"
    >
      <div class="c2">
        <div class="c3">
          <div title="Link with 24px icon"
               class="c4"
          >
            <div class="c5">
              <div class="c6">
                <div class="c7">
                </div>
              </div>
              Link with 24px icon
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Sandbox/MenuListItem InlineIcon smoke-test 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  min-width: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  visibility: visible;
  margin-left: 4px;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 > svg {
  display: block;
}

.c3 {
  overflow: hidden;
  line-height: 22px;
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  -webkit-transition: 0.2s background-color;
  transition: 0.2s background-color;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  opacity: 0.32;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  pointer-events: none;
}

.c0:disabled:hover,
.c0[aria-disabled]:not([aria-disabled=false]):hover {
  background-color: unset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  color: #474747;
  line-height: 22px;
  font-size: 14px;
  display: grid;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: top;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8::before {
  content: '';
  display: inline-block;
  height: 16px;
  width: 16px;
  background-color: currentColor;
}

<div data-dark="false">
  <div aria-disabled="false"
       role="button"
       class="c0"
  >
    <div class="c1">
      <div class="c2">
        <div title="Label with inline icon"
             class="c3"
        >
          <div class="c4">
            <div class="c5">
              Label with inline icon
            </div>
            <div class="c6">
              <div class="c7">
                <div class="c8">
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sandbox/MenuListItem Label smoke-test 1`] = `
.c4 {
  overflow: hidden;
  line-height: 22px;
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
  -webkit-transition: 0.2s background-color;
  transition: 0.2s background-color;
}

.c1:hover {
  background-color: rgba(0,0,0,0.04);
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  opacity: 0.32;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  pointer-events: none;
}

.c1:disabled:hover,
.c1[aria-disabled]:not([aria-disabled=false]):hover {
  background-color: unset;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  color: #474747;
  line-height: 22px;
  font-size: 14px;
  display: grid;
}

.c0 {
  padding: 0 16px;
  font-size: 12px;
  line-height: 16px;
  color: #858585;
  margin-top: -2px;
  margin-bottom: 6px;
}

<div data-dark="false">
  <div class="c0">
    Label
  </div>
  <div aria-disabled="false"
       class="c1"
  >
    <div class="c2">
      <div class="c3">
        <div title="Label grouped items"
             class="c4"
        >
          Label grouped items
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sandbox/MenuListItem Link smoke-test 1`] = `
.c4 {
  overflow: hidden;
  line-height: 22px;
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  -webkit-transition: 0.2s background-color;
  transition: 0.2s background-color;
}

.c1:hover {
  background-color: rgba(0,0,0,0.04);
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  opacity: 0.32;
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  pointer-events: none;
}

.c1:disabled:hover,
.c1[aria-disabled]:not([aria-disabled=false]):hover {
  background-color: unset;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  color: #474747;
  line-height: 22px;
  font-size: 14px;
  display: grid;
}

.c0 {
  display: block;
}

<div data-dark="false">
  <a href="#linkTo"
     class="c0"
  >
    <div aria-disabled="false"
         role="button"
         class="c1"
    >
      <div class="c2">
        <div class="c3">
          <div title="This is link"
               class="c4"
          >
            This is link
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Sandbox/MenuListItem NoHoverEffect smoke-test 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  outline: 0;
}

.c4[aria-disabled='true'] {
  cursor: auto;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  z-index: 0;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  width: 28px;
  height: 16px;
  border-radius: 16px;
  border: 2px solid transparent;
  background: #adadad;
  -webkit-transition: box-shadow 0.2s,background-color 0.2s;
  transition: box-shadow 0.2s,background-color 0.2s;
}

.c10 {
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  width: 12px;
  height: 12px;
  background-color: #ffffff;
  border-radius: 50%;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c6 {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 16px;
  opacity: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  cursor: pointer;
}

.c6:checked ~ .c7 {
  background-color: #0096fa;
}

.c6:checked ~ .c7 .c9 {
  -webkit-transform: translateX(12px);
  -ms-transform: translateX(12px);
  transform: translateX(12px);
}

.c6:disabled {
  cursor: auto;
}

.c6:disabled ~ .c7 {
  opacity: 0.32;
}

.c6:not(:disabled):focus ~ .c7 {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c3 {
  overflow: hidden;
  line-height: 22px;
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  -webkit-transition: 0.2s background-color;
  transition: 0.2s background-color;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  opacity: 0.32;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  pointer-events: none;
}

.c0:disabled:hover,
.c0[aria-disabled]:not([aria-disabled=false]):hover {
  background-color: unset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  color: #474747;
  line-height: 22px;
  font-size: 14px;
  display: grid;
}

<div data-dark="false">
  <div aria-disabled="false"
       role="button"
       class="c0"
  >
    <div class="c1">
      <div class="c2">
        <div title="With toggle (no hover effect)"
             class="c3"
        >
          With toggle (no hover effect)
        </div>
      </div>
    </div>
    <label class="c4">
      <span class="c5">
        <input type="checkbox"
               class="c6"
               checked
        >
        <div class="c7 c8">
          <div class="c9 c10">
          </div>
        </div>
      </span>
    </label>
  </div>
</div>
`;

exports[`Sandbox/MenuListItem Simple smoke-test 1`] = `
.c3 {
  overflow: hidden;
  line-height: 22px;
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 56px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  -webkit-transition: 0.2s background-color;
  transition: 0.2s background-color;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  opacity: 0.32;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  pointer-events: none;
}

.c0:disabled:hover,
.c0[aria-disabled]:not([aria-disabled=false]):hover {
  background-color: unset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  color: #474747;
  line-height: 22px;
  font-size: 14px;
  display: grid;
}

.c4 {
  color: #858585;
  line-height: 18px;
  font-size: 10px;
}

<div data-dark="false">
  <div aria-disabled="false"
       role="button"
       class="c0"
  >
    <div class="c1">
      <div class="c2">
        <div title="Simple item"
             class="c3"
        >
          Simple item
        </div>
      </div>
      <div class="c4">
        <div title="with secondary"
             class="c3"
        >
          with secondary
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sandbox/MenuListItem Spacer smoke-test 1`] = `
.c3 {
  overflow: hidden;
  line-height: 22px;
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
  -webkit-transition: 0.2s background-color;
  transition: 0.2s background-color;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  opacity: 0.32;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  pointer-events: none;
}

.c0:disabled:hover,
.c0[aria-disabled]:not([aria-disabled=false]):hover {
  background-color: unset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  color: #474747;
  line-height: 22px;
  font-size: 14px;
  display: grid;
}

.c4 {
  height: 24px;
}

<div data-dark="false">
  <div aria-disabled="false"
       class="c0"
  >
    <div class="c1">
      <div class="c2">
        <div title="↓ This is spacer"
             class="c3"
        >
          ↓ This is spacer
        </div>
      </div>
    </div>
  </div>
  <div class="c4">
  </div>
  <div aria-disabled="false"
       class="c0"
  >
    <div class="c1">
      <div class="c2">
        <div title="↑ This is spacer"
             class="c3"
        >
          ↑ This is spacer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sandbox/MenuListItem TextEllipsis smoke-test 1`] = `
.c3 {
  overflow: hidden;
  line-height: 22px;
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 24px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
  -webkit-transition: 0.2s background-color;
  transition: 0.2s background-color;
}

.c0:hover {
  background-color: rgba(0,0,0,0.04);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  opacity: 0.32;
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  pointer-events: none;
}

.c0:disabled:hover,
.c0[aria-disabled]:not([aria-disabled=false]):hover {
  background-color: unset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  color: #474747;
  line-height: 22px;
  font-size: 14px;
  display: grid;
}

<div data-dark="false">
  <div css="
      width: 300px;
    ">
    <div aria-disabled="false"
         class="c0"
    >
      <div class="c1">
        <div class="c2">
          <div title="Loooooooooooooooooooooooooong texxxxxxxxxxxxxxxxxxxxxxxxxt"
               class="c3"
          >
            Loooooooooooooooooooooooooong texxxxxxxxxxxxxxxxxxxxxxxxxt
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
